--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -49,7 +49,7 @@
         grid-template: repeat(5, 1fr) auto / minmax(auto, 240px) repeat(5, 1fr);
     }
     .header-container{
-        grid-row: 1/ 4;
+        grid-row: 1/ 5;
         grid-column: 1/ 2;
         max-height: initial;
         max-width: 250px;
@@ -76,10 +76,11 @@
         max-width: 250px;
     }
     .footer-container{
-        grid-row: 6 / 7;
-        grid-column: 2 / 7;
+        grid-row: 5 / 7;
+        grid-column: 1 / 2;
         min-height: initial;
         display: flex;
+        flex-direction: column;
         justify-content: space-between;
         box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
     }
