--- a/resources/less/web/main.less
+++ b/resources/less/web/main.less
@@ -1,15 +1,4 @@
 /* ===== M A I N ===== */
-.admin-main-container{
-    grid-row: 2 / 13;
-    grid-column: 1 / 13;
-
-    display: grid;
-    grid-template: repeat(12, 1fr) / repeat(12, 1fr);
-}
-.user-fields{
-    grid-row: 1 / 13;
-    grid-column: 1 / 4;
-}
 
 .main-container {
     /* Wraps everything in the content section */
@@ -48,10 +37,10 @@
 .section-title {
     margin-left:20px;
 }
-@media @tablet{
-    .index-container{
-    }
-}
+// @media @tablet{
+//     .index-container{
+//     }
+// }
 @media @desktop{
     .main-container{
         grid-row: 2 / 7;
