--- a/resources/less/web/about.less
+++ b/resources/less/web/about.less
@@ -1,59 +1,90 @@
+@media @desktop {
 .about{
-    display: grid;
-    grid-template: 1fr/ 1.5fr 2fr;
-    width: 50%;
-    height: 70%;
-    background: @form_bg;
-    overflow: hidden;
-    border-radius: 3px;
-    box-shadow: 0px 0px 20px 1px #00000069 !important;
+    margin:1em;
     color: @about_text_color;
 
+    &_header{
+        
+        display:grid;
+        grid-template: auto / auto 1fr;
+        grid-column-gap: 1em;
 
-    &-img-container{
+        &_image{
 
-        img{
-            width: 100%;
-            aspect-ratio: 9 / 15;
-            object-fit: cover;
-            object-position: center;
         }
-    }
 
-    &-description-container{
+        &_description{
+
+        }
+
+    }
+    &_body{
         display: grid;
-        place-items: center;
-        text-align: justify;
-        overflow-y: scroll;
-        box-sizing: border-box;
+        grid-template: auto / repeat(2, 1fr);
+        grid-column-gap: 1em;
 
-        .about-description-content{
-            width: 80%;
-            // height: 70%;
-            padding: 50px 20px;
-
+        &-section{
+            margin: 1em 0;
+            padding: 1em;
+            background-color: #002;
         }
     }
+    &_footer{
 
+    }
+    // width: 50%;
+    // height: 70%;
+    // background: @form_bg;
+    // overflow: hidden;
+    // border-radius: 3px;
+    // box-shadow: 0px 0px 20px 1px #00000069 !important;
 }
 
-.author-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    // &-img-container{
 
-    .author-img-container{
+    //     img{
+    //         width: 100%;
+    //         aspect-ratio: 9 / 15;
+    //         object-fit: cover;
+    //         object-position: center;
+    //     }
+    // }
 
-        max-height: 200px;
-        max-width: 200px;
-        border-radius: 50% !important;
-        overflow: hidden;
+//     &-description-container{
+//         display: grid;
+//         place-items: center;
+//         text-align: justify;
+//         overflow-y: scroll;
+//         box-sizing: border-box;
 
-        img{
-            max-width: inherit;
-            max-height: inherit;
-            object-fit: cover;
-        }
-    }
+//         .about-description-content{
+//             width: 80%;
+//             // height: 70%;
+//             padding: 50px 20px;
+
+//         }
+//     }
+
+// }
+
+    // .author-container {
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: center;
+    //     align-items: center;
+
+    //     .author-img-container{
+
+    //         max-height: 200px;
+    //         max-width: 200px;
+    //         border-radius: 50% !important;
+    //         overflow: hidden;
+
+    //         img{
+    //             max-width: inherit;
+    //             max-height: inherit;
+    //             object-fit: cover;
+    //         }
+    //     }
+    // }
 }
