--- a/resources/less/web/index.less
+++ b/resources/less/web/index.less
@@ -5,7 +5,6 @@
 
 @import './layout.less';
 @import './navigation.less';
-@import './logotype.less';
 @import './home.less';
 @import './blog.less';
 @import './portfolio.less';
@@ -16,6 +15,7 @@
 @import './main.less';
 @import './ads.less';
 
+@import '../partial/logotype.less';
 @import '../partial/breadcrumbs.less';
 @import '../partial/rating.less';
 @import '../partial/errors.less';
