--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -67,6 +67,15 @@
         grid-auto-flow: column;
         grid-template: auto repeat(5, 1fr) / 1fr;
         overflow: hidden;
+
+        main{
+            grid-row: 2 / 7;
+            overflow-y: scroll;
+        }
+    }
+
+    .module{
+       margin: 1em;
     }
     .aside-container{
         display: grid;
