[RFT] Blog layout

--- a/resources/less/web/index.less
+++ b/resources/less/web/index.less
@@ -15,7 +15,7 @@
 @import './main.less';
 @import './ads.less';
 
-@import '../partial/logotype.less';
+@import '../partial/brand.less';
 @import '../partial/breadcrumbs.less';
 @import '../partial/rating.less';
 @import '../partial/errors.less';
