--- a/resources/less/web/blog.less
+++ b/resources/less/web/blog.less
@@ -43,11 +43,12 @@
         margin: 2em;
         display: grid;
         grid-template: auto / auto;
+        grid-row-gap: 2em;
         align-items: center;
         
         
         &-category{
-            margin: 1.5em auto;
+            margin: 0 auto;
 
             &_name{
                 
