[RFT] Web Layout & Pallete

--- a/resources/less/common/body.less
+++ b/resources/less/common/body.less
@@ -17,29 +17,31 @@ body, h1, h2, h3, h4, h5, h6, p, ul, li{
     padding: 0;
     list-style: none;
 }
+
 a{
     text-decoration: none;
     color: initial;
+    
     &:visited{
         color: initial;
     }
 }
 
-h1{
-    font-size: @parent_heading_size;
-}
-h2{
-    font-size: @heading_size;
-}
-h3{
-    font-size: @sub_heading_size;
-}
-h4{
-    font-size: @annotation_size
-}
-h5{
-    font-size: @sub_annotation_size;
-}
-h6{
-    font-size: @child_annotation_size
-}
+// h1{
+//     font-size: @parent_heading_size;
+// }
+// h2{
+//     font-size: @heading_size;
+// }
+// h3{
+//     font-size: @sub_heading_size;
+// }
+// h4{
+//     font-size: @annotation_size
+// }
+// h5{
+//     font-size: @sub_annotation_size;
+// }
+// h6{
+//     font-size: @child_annotation_size
+// }
