--- a/resources/less/common/variables.less
+++ b/resources/less/common/variables.less
@@ -23,12 +23,12 @@
 @base_font_color: rgb(9, 9, 9);
 @website_title_color: @tint_two;
 @base_font_size: 15px;
-@parent_heading_size : 25px;
-@heading_size : 20px;
-@sub_heading_size : 18px;
-@annotation_size : 15px;
-@sub_annotation_size : 12px;
-@child_annotation_size : 10px;
+// @parent_heading_size : 25px;
+// @heading_size : 20px
+// @sub_heading_size : 18px;
+// @annotation_size : 15px;
+// @sub_annotation_size : 12px;
+// @child_annotation_size : 10px;
 
 /* Colors */
 @primary:              #37c0ff;
