--- a/resources/less/partial/brand.less
+++ b/resources/less/partial/brand.less
@@ -4,7 +4,8 @@
     grid-template: auto / auto 1fr;
     grid-column-gap: 1em;
     align-items: center;
-    color: #fff;
+    margin: 1em;
+    // color: #fff;
 
     &:hover{
         cursor: pointer;
@@ -14,8 +15,8 @@
         width: 2em;
     }
     &-title{
-        color: inherit;
-        font-size: 1.5em;
+        // color: inherit;
+        // font-size: 1.5em;
     }
 }
 @media @desktop{
