--- a/resources/less/partial/notification.less
+++ b/resources/less/partial/notification.less
@@ -13,11 +13,11 @@
 }
 
 .notification-message {
-    font-size: @subtitle-font-size;
+    // font-size: @subtitle-font-size;
     font-weight: bold;
-    color: @complement-color;
+    // color: @complement-color;
 }
 
 .warning {
-    background-color: fade(@warning-prevent-color, 50%);
+    // background-color: fade(@warning-prevent-color, 50%);
 }
