--- a/resources/less/web/copyright.less
+++ b/resources/less/web/copyright.less
@@ -1,6 +1,6 @@
 .copyrights {
     display: flex;
-    font-size: @child_annotation_size;
+    // font-size: @child_annotation_size;
     padding: 10px;
-    color: @footer_text_color;
+    // color: @footer_text_color;
 }
