--- a/resources/less/web/index.less
+++ b/resources/less/web/index.less
@@ -20,4 +20,4 @@
 @import '../partial/rating.less';
 @import '../partial/errors.less';
 
-@import '../partial/partials.less';
+@import '../common/components.less';
