--- a/resources/less/web/portfolio.less
+++ b/resources/less/web/portfolio.less
@@ -37,11 +37,12 @@
             flex-flow: wrap;
             justify-content: center;
 
-            &-project{
+            a{
                 margin: 1em;
+            }
+            &-project{
                 width: 200px;
                 height: 200px;
-                border-radius: 3px;
                 
                 display: flex;
                 place-items: center;
