--- a/resources/less/web/socialmedia.less
+++ b/resources/less/web/socialmedia.less
@@ -1,5 +1,5 @@
 .socialmedia{
-    color: @footer_text_color;
+    // color: @footer_text_color;
     padding: 20px;
     text-align: center;
     
@@ -9,14 +9,14 @@
         grid-template: repeat(2, 1fr) / repeat(4, 1fr);
 
         & > a{
-            color: @footer_text_color;
+            // color: @footer_text_color;
             margin: 0 10px;
 
             &:hover {
-                background-color: @link_bg_color_hover;
+                // background-color: @link_bg_color_hover;
             }
             &:active{
-                background-color: @link_bg_color_active;
+                // background-color: @link_bg_color_active;
             }
         }
     }
