--- a/resources/less/admin/index.less
+++ b/resources/less/admin/index.less
@@ -7,7 +7,7 @@
 
 @import '../common/body.less';
 
-@import '../partial/partials.less';
+@import '../common/components.less';
 @import '../partial/preview-item.less';
 
 
