--- a/resources/less/common/components.less
+++ b/resources/less/common/components.less
@@ -1,3 +1,13 @@
+.card{
+    overflow: hidden;
+    min-width: 1em;
+    min-height: 1em;
+    
+    border-radius: .4em;
+    box-shadow: 0em .5em .5em fade(#000, 50%);
+}
+
+
 .tag {
     display: inline-block;
     padding: 5px;
@@ -13,6 +23,3 @@
     text-align: justify;
     padding: 10px 0;
 }
-
-@import './entry.less';
-@import './archive.less';
