--- a/resources/less/partial/breadcrumbs.less
+++ b/resources/less/partial/breadcrumbs.less
@@ -6,7 +6,7 @@
     grid-auto-flow: column;
     grid-column-gap: 10px;
     align-items: center;
-    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.7);
+    // box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.7);
 
     position: sticky;
     top: 75px;
@@ -15,8 +15,8 @@
     width: 100%;
     padding: 10px 0;
     font-weight: bold;
-    color: @breadcrumbs_text_color;
-    background-color: @breadcrumbs_bg_color;
+    // color: @breadcrumbs_text_color;
+    // background-color: @breadcrumbs_bg_color;
 }
 .previous-button{
     .flex-center-content;
