--- a/resources/less/web/blog.less
+++ b/resources/less/web/blog.less
@@ -1,76 +1,49 @@
-// .post-list-container{
-//     border: 5px solid rgba(194, 194, 194, 0.2) !important;
-//     background: radial-gradient(ellipse at center, rgba(50, 130, 183, 0.45) 50%, #00000029 100%) !important;
-//     padding: 0 !important;
-// }
-.box-item{
+.blog{
     display: grid;
-    grid-template: auto / 1fr;
-    grid-row-gap: 15px;
-
-    &-title-container{
-        margin: 15px 0;
-        padding-bottom: 5px;
-        border-bottom: 1px solid;
-    }
-
-    &-img-container{
-        border: 5px solid rgb(221, 221, 221);
-        border-radius: 5px;
-        max-height: 500px;
-
-        img {
-            .image-size(100%, 100%);
-        }
-    }
-
-    &-meta-container{
-        display: inherit;
-        grid-template: auto / 1fr;
-        grid-row-gap: 5px;
-        border-radius: 5px;
-        // .box-container-mixin(20%, 10px, @mid_neutral, none, none, none);
-        box-shadow: none;
-    }
-
-    &-content-container{
-        color:@fourth;
-        text-align: justify;
-    }
-}
-@media @desktop{
-    .blog{
-        margin: 2em;
-        display: grid;
-        grid-template: auto / auto;
-        grid-row-gap: 2em;
-        align-items: center;
+    grid-template: auto / auto;
+    grid-row-gap: 2em;
+    align-items: center;
+    margin: 2em;
+    
+    &-category{
+        margin: 0 auto;
+        border-radius: 5px 5px;
         
+        &_header{
+            position: relative;
+            padding: .5em 1em;
+            border-radius: 0 5px 5px 0;
         
-        &-category{
-            margin: 0 auto;
-
-            &_name{
-                
+            &-icon{
+                display: flex;
+                place-items: center;
+                place-content: center;
+                position: absolute;
+                top: -.25em;
+                left: -0.8em;
+                width: 2em;
+                height: 2em;
+                font-size: 1.5em;
+                border-radius: 50%;
             }
-
+            &-name{
+                margin: 0 1.5em;
+            }
+        }
+        &_body{
             &-articles{
                 display: flex;
                 flex-flow: wrap;
-               
                 width: 100%;
-
-                &-article{
-                    border-radius: 5px;
-                    overflow: hidden;
+                
+                a{
                     margin: 1em;
+                }
+                &-article{
                     width: 200px;
                     height: 200px;
-                    background-color: darkblue;
-
                     
                     &_image{
-                        // border-radius: 5px;
                         width: 100%;
                         object-fit: cover;
                         aspect-ratio: 16 / 9;
@@ -80,7 +53,6 @@
                         text-align: center;
                     }
                 }
-
             }
         }
     }
