--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -2,9 +2,6 @@
     height: inherit;
     overflow: scroll;
 }
-.website-title{
-    color: @website_title_color;
-}
 /* ===== H E A D E R ===== */
 .header-container{
     position: sticky;
@@ -13,8 +10,6 @@
     width: 100%;
     max-height: 75px;
     overflow: hidden;
-    background: @header_bg;
-    // background-color: @header_bg;
     .transition(max-height, 1s, ease-in-out);
 }
 .transparent-header-container{
@@ -27,20 +22,16 @@
 .desktop-container{
  /* Wraps the section between the header & aside */
     z-index: @desktop_index;
-    background-color: @desktop_bg_color;
 }
 /* ===== A S I D E ===== */
 .aside-container{
     z-index: @aside_index;
     text-align: center;
-    background-color: @aside_bg_color;
-
 }
 /* ===== F O O T E R ===== */
 .footer-container {
     z-index: @footer_index;
-    box-shadow: 0px 0px 10px 1px #0000004a;
-    background-color: @footer_bg_color;
+    // box-shadow: 0px 0px 10px 1px #0000004a;
 }
 @media @desktop{
     .user-layout {
@@ -91,6 +82,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+        // box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
     }
 }
