--- a/resources/less/web/navigation.less
+++ b/resources/less/web/navigation.less
@@ -1,51 +1,68 @@
 /* ===== N A V I G A T I O N ===== */
-.mobile-nav-button{
-    .fixed-widh-height(40px,40px);
-    .no-margin-padding;
-    .flex-center-content;
-    .round-border(2px, solid, 10px);
-    .box-container-mixin(10%, 0px, @primary);
-    transform: rotateZ(90deg);
-    font-weight: bold;
-    position: sticky;
-    z-index: @header_nav_index;
+// .mobile-nav-button{
+//     .fixed-widh-height(40px,40px);
+//     .no-margin-padding;
+//     .flex-center-content;
+//     .round-border(2px, solid, 10px);
+//     .box-container-mixin(10%, 0px, @primary);
+//     transform: rotateZ(90deg);
+//     font-weight: bold;
+//     position: sticky;
+//     z-index: @header_nav_index;
 
-    .transition(all, .5s, ease-out);
-
-
-    &:hover{
-        background-color: fade(@shade_two, 1%);
-    }
-    &:active{
-        .fixed-widh-height(45px,45px);
-        background-color: fade(@shade_two, 2%);
-    }
-}
-
-.header-navigation-container{
-    // padding: 20px;
+//     .transition(all, .5s, ease-out);
 
 
-    & > ul{
-        list-style: none;
-        text-align: center;
-        display: grid;
-        grid-template: auto / 1fr;
-        // grid-row-gap: 5px;
+//     &:hover{
+//         background-color: fade(@shade_two, 1%);
+//     }
+//     &:active{
+//         .fixed-widh-height(45px,45px);
+//         background-color: fade(@shade_two, 2%);
+//     }
+// }
 
-        > a {
+.navigation{
+ 
+    &-modules{
+        // list-style: none;
+        // display: grid;
+        // grid-template: auto / 1fr;
+        // justify-content: center;
+
+        &-module{
+            display: grid;
+            grid-template: auto / 1fr 1fr;
+            // grid-column-gap: 1em;
+            place-items: center;
+            margin: .5em auto;
+            width: 80%-20%;
+            padding: .5em;
+            border-radius: 1em;
             box-shadow: 0px 0px 1px 1px #00000021;
-            background: linear-gradient(transparent, #00000030);
 
-            padding:10px;
-            color: @header_text_color;
-
+            // background: linear-gradient(transparent, #00000030);
+            // color: @header_text_color;
+            
             &:hover{
-                background-color: @link_bg_color_hover;
-                border-radius: 2px;
+                // background-color: @link_bg_color_hover;
+                width: 80%;
+
             }
+
             &:active{
-                background-color: @link_bg_color_active;
+                // background-color: @link_bg_color_active;
+                width: 85%;
+            }
+
+            
+            &_icon{
+                margin: 0 0 0 .5em
+    
+            }
+            
+            &_name{
+    
             }
         }
     }
