--- a/resources/less/common/body.less
+++ b/resources/less/common/body.less
@@ -12,7 +12,7 @@ body {
     // background: @body_bg_img;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ul, li{
+body, h1, h2, h3, h4, h5, h6, p, ol, ul, li{
     margin: 0;
     padding: 0;
     list-style: none;
