--- a/resources/less/web/copyright.less
+++ b/resources/less/web/copyright.less
@@ -1,6 +1,6 @@
-.copyrights {
+.copyright {
     display: flex;
-    // font-size: @child_annotation_size;
+    font-size: .8em;
     padding: 10px;
     // color: @footer_text_color;
 }
