--- a/resources/less/web/index.less
+++ b/resources/less/web/index.less
@@ -6,7 +6,7 @@
 @import './layout.less';
 @import './navigation.less';
 @import './home.less';
-@import './blog.less';
+@import './blog/blog.less';
 @import './portfolio.less';
 @import './about.less';
 @import './contact.less';
