--- a/resources/less/web/portfolio/portfolio.less
+++ b/resources/less/web/portfolio/portfolio.less
@@ -57,4 +57,35 @@
             }
         }
     }
+
+    .project{
+        display:grid;
+        grid-row-gap: 1em;
+        margin: 2em;
+        max-width: 50%;
+
+        &_header{
+            display:grid;
+            grid-row-gap: 1em;
+
+            &-hero{
+                height: 150px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                display: flex;
+                place-items: center;
+                place-content: center;
+
+                &_title{
+                }
+            }
+        }
+        &_body{
+
+        }
+        &_footer{
+
+        }
+    }
 }
