--- a/resources/less/web/index.less
+++ b/resources/less/web/index.less
@@ -7,7 +7,7 @@
 @import './navigation.less';
 @import './home.less';
 @import './blog/blog.less';
-@import './portfolio.less';
+@import './portfolio/portfolio.less';
 @import './about.less';
 @import './contact.less';
 @import './socialmedia.less';
