--- a/resources/less/web/contact.less
+++ b/resources/less/web/contact.less
@@ -2,7 +2,7 @@
 .form-container {
     box-shadow: 0px 0px 20px 1px #00000069 !important;
     // background-color: @form_bg_color;
-    background: @form_bg;
+    // background: @form_bg;
     border-radius: 3px;
 
     form{
@@ -17,37 +17,37 @@
             display: block;
             width: 100%;
             margin-bottom: 5px;
-            color: @label_text_color;
+            // color: @label_text_color;
         }
         input, select, textarea, button{
             .input-reset;
             padding: 5px 0;
             font-family: inherit !important;
             border-radius: 2px;
-            border: 1px solid @input_border_color;
-            color: @input_text_color;
+            // border: 1px solid @input_border_color;
+            // color: @input_text_color;
             width: 100%;
         }
         input {
             height: 25px;
             width: calc(100% - 10px);
             padding-left: 10px;
-            background-color: @input_bg_color;
+            // background-color: @input_bg_color;
         }
         select{
-            background-color: @input_bg_color;
+            // background-color: @input_bg_color;
         }
         button{
             padding: 10px;
-            color: @button_text_color;
-            background: @button_bg_color;
+            // color: @button_text_color;
+            // background: @button_bg_color;
 
 
             &:hover{
-                background: @button_bg_color_hover;
+                // background: @button_bg_color_hover;
             }
             &:active{
-                background: @button_bg_color_active;
+                // background: @button_bg_color_active;
             }
         }
         textarea{
@@ -56,10 +56,10 @@
             height: 100px;
             padding-left: 10px;
             width: calc(100% - 10px);
-            background-color: @input_bg_color;
+            // background-color: @input_bg_color;
 
             &::placeholder{
-                color: @input_border_color;
+                // color: @input_border_color;
             }
         }
         .g-recaptcha{
