[RFTOR] Blog & About Layout

--- a/resources/less/common/components.less
+++ b/resources/less/common/components.less
@@ -23,3 +23,39 @@
     text-align: justify;
     padding: 10px 0;
 }
+
+.module{
+   
+    .section{
+        margin: 2em 4em;
+
+
+        &_header{
+            position: relative;
+            padding: .5em 1em;
+            border-radius: 0 5px 5px 0;
+            background-position: center;
+            background-size: fill;
+            background-repeat: no-repeat;
+            
+
+            &-icon{
+                position: absolute;
+                top: -.25em;
+                left: -0.8em;
+                display: flex;
+                place-items: center;
+                place-content: center;
+                width: 2em;
+                height: 2em;
+                background-color: blue;
+                color: #ffF;
+                font-size: 1.5em;
+                border-radius: 50%;
+            }
+            &-name{
+                margin: 0 1.5em;
+            }
+        }
+    }
+}
