--- a/resources/less/web/index.less
+++ b/resources/less/web/index.less
@@ -2,13 +2,14 @@
 @import '../common/mixins.less';
 @import '../common/animations.less';
 @import '../common/body.less';
+@import '../common/components.less';
 
 @import './layout.less';
 @import './navigation.less';
 @import './home.less';
 @import './blog/blog.less';
 @import './portfolio/portfolio.less';
-@import './about.less';
+@import './about/about.less';
 @import './contact.less';
 @import './socialmedia.less';
 @import './copyright.less';
@@ -19,5 +20,3 @@
 @import '../partial/breadcrumbs.less';
 @import '../partial/rating.less';
 @import '../partial/errors.less';
-
-@import '../common/components.less';
