--- a/resources/less/partial/brand.less
+++ b/resources/less/partial/brand.less
@@ -4,8 +4,10 @@
     grid-template: auto / auto 1fr;
     grid-column-gap: 1em;
     align-items: center;
-    margin: 1em;
-    // color: #fff;
+    background: #fff;
+    padding: 1em;
+    border-bottom: solid 0.1px #d7d7d7;
+    box-shadow: 0px 1.5px 9px 1px #d8d8d8;
 
     &:hover{
         cursor: pointer;
