--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -7,7 +7,7 @@
     position: sticky;
     top: 0;
     z-index: @header_index;
-    width: 100%;
+    // width: 100%;
     max-height: 75px;
     overflow: hidden;
     .transition(max-height, 1s, ease-in-out);
@@ -37,36 +37,35 @@
     .user-layout {
         overflow: hidden;
         display:grid;
-        grid-template: repeat(5, 1fr) auto / minmax(auto, 240px) repeat(5, 1fr);
+        grid-template: repeat(2, 1fr) auto / minmax(auto, 240px) repeat(5, 1fr);
     }
     .header-container{
-        grid-row: 1/ 5;
+        grid-row: 1/ 3;
         grid-column: 1/ 2;
         max-height: initial;
         max-width: 250px;
         display: grid;
         grid-template: auto 1fr / 1fr;
         grid-row-gap: 20px;
+        background: #f7f7f7;
+        border-right: solid 1px #cac9c7;
+   
     }
     .transparent-header-container{
         display: block;
     }
     .desktop-container{
-        grid-row: 1 / 6;
+        grid-row: 1 / 4;
         grid-column: 2 / 7;
         display: grid;
         grid-auto-flow: column;
-        grid-template: auto repeat(5, 1fr) / 1fr;
+        grid-template: auto 1fr / 1fr;
         overflow: hidden;
 
         main{
             grid-row: 2 / 7;
             overflow-y: scroll;
         }
-    }
-
-    .module{
-       margin: 1em;
     }
     .aside-container{
         display: grid;
@@ -76,12 +75,14 @@
         max-width: 250px;
     }
     .footer-container{
-        grid-row: 5 / 7;
+        grid-row: 3 / 4;
         grid-column: 1 / 2;
         min-height: initial;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        background: #f7f7f7;
+        border-right: solid 1px #cac9c7;
         // box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
     }
 }
