--- a/resources/less/common/components.less
+++ b/resources/less/common/components.less
@@ -4,7 +4,7 @@
     min-height: 1em;
     
     border-radius: .4em;
-    box-shadow: 0em .5em .5em fade(#000, 50%);
+    box-shadow: 0em 0.2em 0.2em rgb(0 0 0 / 30%)
 }
 
 
