--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -48,7 +48,8 @@
         grid-template: auto 1fr / 1fr;
         grid-row-gap: 20px;
         background: #f7f7f7;
-        border-right: solid 1px #cac9c7;
+        border-right: solid 0.1px #cac9c7;
+        box-shadow: 0.1em -0.2em 0.2em 0em rgb(0 0 0 / 20%);
    
     }
     .transparent-header-container{
@@ -61,6 +62,7 @@
         grid-auto-flow: column;
         grid-template: auto 1fr / 1fr;
         overflow: hidden;
+        background:linear-gradient(#ffffff 70%, #f3f3f3 90%);
 
         main{
             grid-row: 2 / 7;
@@ -81,8 +83,8 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        background: #f7f7f7;
-        border-right: solid 1px #cac9c7;
-        // box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.2);
+        background: linear-gradient(#f7f7f7 25%, #e7e7e7 80%);
+        border-right: solid 0.1px #cac9c7;
+        box-shadow: 0.1em -0.2em 0.2em 0em rgb(0 0 0 / 20%);
     }
 }
