[RFT] Portfolio | Category Layout

--- a/resources/less/web/about/about.less
+++ b/resources/less/web/about/about.less
@@ -10,6 +10,12 @@
 
         &-author{
             grid-column: span 2;
+            border-radius: 5em 1em 1em 5em;
+            background-repeat: no-repeat;
+            background-size: fill;
+            background-position: center;
+            color: #fff;
+            font-weight: 600;
         }
     
         &-section{
