--- a/resources/less/common/body.less
+++ b/resources/less/common/body.less
@@ -9,39 +9,20 @@ body {
     font-size: @base_font_size;
     font-family: @base_font_family;
     font-weight: 500;
-    // background: @body_bg_img;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul, li{
     margin: 0;
     padding: 0;
     list-style: none;
+    color: #1d1d1d;
 }
 
 a{
     text-decoration: none;
-    color: initial;
+    color: #1d1d1d;
     
     &:visited{
-        color: initial;
+        color: #1d1d1d;
     }
 }
-
-// h1{
-//     font-size: @parent_heading_size;
-// }
-// h2{
-//     font-size: @heading_size;
-// }
-// h3{
-//     font-size: @sub_heading_size;
-// }
-// h4{
-//     font-size: @annotation_size
-// }
-// h5{
-//     font-size: @sub_annotation_size;
-// }
-// h6{
-//     font-size: @child_annotation_size
-// }
