--- a/resources/less/common/components.less
+++ b/resources/less/common/components.less
@@ -25,7 +25,7 @@
 }
 
 .module{
-   
+
     .section{
         margin: 2em 4em;
 
@@ -48,10 +48,11 @@
                 place-content: center;
                 width: 2em;
                 height: 2em;
-                background-color: blue;
-                color: #ffF;
+                background: linear-gradient(45deg, #cccccc 0%, #f7f7f7 10% 90%, #cccccc 100%);
+                color: #363232;
                 font-size: 1.5em;
                 border-radius: 50%;
+                border: solid 1.5px #cccccc;
             }
             &-name{
                 margin: 0 1.5em;
