--- a/resources/less/partial/brand.less
+++ b/resources/less/partial/brand.less
@@ -5,9 +5,9 @@
     grid-column-gap: 1em;
     align-items: center;
     background: #fff;
-    padding: 1em;
+    padding: .6em;
     border-bottom: solid 0.1px #d7d7d7;
-    box-shadow: 0px 1.5px 9px 1px #d8d8d8;
+    box-shadow: 0px 1.5px 9px 1px #00000033;
 
     &:hover{
         cursor: pointer;
