--- a/resources/less/partial/breadcrumbs.less
+++ b/resources/less/partial/breadcrumbs.less
@@ -1,20 +1,23 @@
 /* ===== B R E A D C R U M B S ===== */
-.breadcrumbs-container{
+.breadcrumbs{
     // .panel-secondary;
-    display: grid;
-    grid-template: 1fr / auto 1fr auto;
-    grid-auto-flow: column;
-    grid-column-gap: 10px;
-    align-items: center;
-    // box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.7);
+    // display: grid;
+    // grid-template: 1fr / auto 1fr auto;
+    // grid-auto-flow: column;
+    // grid-column-gap: 10px;
+    // align-items: center;
+    padding: 1em 0;
+    box-shadow: 0.1em 0.2em 0.2em 0em #00000033;
+    background-color: #fff;
+    // background: linear-gradient(90deg, #f5f5f5 5%, #f7f7f7 10% 90%, #f5f5f5 95%);
 
-    position: sticky;
-    top: 75px;
-    z-index: @breadcrumbs_index;
+    // position: sticky;
+    // top: 75px;
+    z-index: 8;
 
-    width: 100%;
-    padding: 10px 0;
-    font-weight: bold;
+    // width: 100%;
+    // padding: 10px 0;
+    // font-weight: bold;
     // color: @breadcrumbs_text_color;
     // background-color: @breadcrumbs_bg_color;
 }
@@ -44,7 +47,7 @@
         display: flex;
         grid-auto-flow: column;
         grid-column-gap: .5em;
-        margin: .5em 1em;
+        margin: 0 1em;
     }
     .breadcrumbs-container{
         position: initial;
