--- a/resources/less/web/layout.less
+++ b/resources/less/web/layout.less
@@ -49,7 +49,7 @@
         grid-row-gap: 20px;
         background: #f7f7f7;
         border-right: solid 0.1px #cac9c7;
-        box-shadow: 0.1em -0.2em 0.2em 0em rgb(0 0 0 / 20%);
+        box-shadow: 0.1em -0.2em 0.2em 0em #00000033
    
     }
     .transparent-header-container{
@@ -62,7 +62,7 @@
         grid-auto-flow: column;
         grid-template: auto 1fr / 1fr;
         overflow: hidden;
-        background:linear-gradient(#ffffff 70%, #f3f3f3 90%);
+        background:linear-gradient(#ffffff 70%, #e1e1e1 90%);
 
         main{
             grid-row: 2 / 7;
@@ -85,6 +85,7 @@
         justify-content: space-between;
         background: linear-gradient(#f7f7f7 25%, #e7e7e7 80%);
         border-right: solid 0.1px #cac9c7;
-        box-shadow: 0.1em -0.2em 0.2em 0em rgb(0 0 0 / 20%);
+        box-shadow: 0.1em -0.2em 0.2em 0em #00000033;
+        padding-top: 1em;
     }
 }
