--- a/resources/less/web/copyright.less
+++ b/resources/less/web/copyright.less
@@ -1,6 +1,13 @@
 .copyright {
     display: flex;
     font-size: .8em;
-    padding: 10px;
-    // color: @footer_text_color;
+    padding: .5em;
+
+    a{
+        line-height: 0;
+        &:hover{
+            cursor: text;
+        }
+    }
+   
 }
