--- a/resources/less/common/components.less
+++ b/resources/less/common/components.less
@@ -6,6 +6,10 @@
     border-radius: .4em;
     box-shadow: 0em 0.2em 0.2em rgb(0 0 0 / 30%)
 }
+.validation_error{
+    font-size: .8em;
+    color:red;
+}
 
 
 .tag {
