--- a/resources/less/partial/brand.less
+++ b/resources/less/partial/brand.less
@@ -4,10 +4,10 @@
     grid-template: auto / auto 1fr;
     grid-column-gap: 1em;
     align-items: center;
-    background: #fff;
-    padding: .6em;
-    border-bottom: solid 0.1px #d7d7d7;
-    box-shadow: 0px 1.5px 9px 1px #00000033;
+    // background: #fff;
+    // padding: .6em;
+    // border-bottom: solid 0.1px #d7d7d7;
+    // box-shadow: 0px 1.5px 9px 1px #00000033;
 
     &:hover{
         cursor: pointer;
