--- a/resources/less/web/about/about.less
+++ b/resources/less/web/about/about.less
@@ -23,8 +23,15 @@
             display: grid;
             grid-template: auto 1fr auto / auto;
             grid-row-gap: 1em;
+            background-color: #fff;
+            border: solid 1px   #b1b1b17c;
+            border-radius: .5em;
+            box-shadow: 0em 0.2em 0.4em 0em #00000033;
+
+            
 
             &_header{
+                border-radius: 0 .5em 0 0 !important;
                 
                 &-icon{
                 }
@@ -33,6 +40,7 @@
             }
         
             &_body{
+                padding: 1em;
             }
 
             &_footer{
