--- a/resources/less/web/contact.less
+++ b/resources/less/web/contact.less
@@ -6,7 +6,10 @@
     box-shadow: 0em 0.2em 0.4em 0em #00000033;
     box-sizing: border-box;
     border-radius: .5em;
-    border: solid 1px #d7d7d7;
+    // border: solid 1px #d7d7d7;
+    border: solid 1px   #b1b1b1;
+  
+    background-color: #fff;
 
     .form-group{
         margin: 0 0 1em 0;
@@ -22,6 +25,8 @@
             width: 100%;
             background-color: #efefef;
             border: none;
+            border: solid .1px   #b1b1b17c;
+
         }
         input {
             height: 25px;
