--- a/resources/less/partial/breadcrumbs.less
+++ b/resources/less/partial/breadcrumbs.less
@@ -10,7 +10,10 @@
     box-shadow: 0.1em 0.2em 0.2em 0em #00000033;
     background-color: #fff;
     // background: linear-gradient(90deg, #f5f5f5 5%, #f7f7f7 10% 90%, #f5f5f5 95%);
-
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
     // position: sticky;
     // top: 75px;
     z-index: 8;
